src/objects/G2OPlanning_Release_Package__c.object
<CustomObject>
    <description>A release package is one or more Change Sets. It may also include other instructions, such as configuration changes and or app install processes</description>
    <fields>
        <fullName>Change_Set_Link__c</fullName>
        <description>This is the link to the changeset, it is probably not in the production environment.</description>
        <label>Change Set Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Change_Set_s__c</fullName>
        <label>Change Set Name(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config_Other_Deployment_Notes__c</fullName>
        <inlineHelpText>Include further instructions, such as moving data (custom settings), appexchange details, alternative config, approval workflows etc.</inlineHelpText>
        <label>Config / Other Deployment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployed_to__c</fullName>
        <label>Deployed to</label>
        <picklist>
            <picklistValues>
                <fullName>AmQA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROD</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Descriptoin__c</fullName>
        <label>Release Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Limitations__c</fullName>
        <label>Known Limitations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release_target__c</fullName>
        <label>Release target</label>
        <picklist>
            <picklistValues>
                <fullName>2014 / 9</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2014 / 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 / 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 / 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 / 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyper-Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016/1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016/3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open for Contributions...</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Rollback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolled-back</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>QA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (see notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Release Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Change_Set_s__c</columns>
        <columns>Config_Other_Deployment_Notes__c</columns>
        <columns>Deployed_to__c</columns>
        <columns>Known_Limitations__c</columns>
        <columns>Descriptoin__c</columns>
        <columns>Release_target__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sprint_Release</fullName>
        <columns>NAME</columns>
        <columns>Descriptoin__c</columns>
        <columns>Change_Set_s__c</columns>
        <columns>Release_target__c</columns>
        <columns>Status__c</columns>
        <columns>Deployed_to__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>G2OPlanning_Release_Package__c.Sprint_Release</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open for Contributions...,Ready for deployment,Failed Deploy,Pending Rollback</value>
        </filters>
        <label>Sprint Release - Not deployed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Release Package ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Packages</pluralLabel>
    <recordTypes>
        <fullName>AM_Release</fullName>
        <active>true</active>
        <description>This record type is used for the AM releases.</description>
        <label>AM Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Environment_Creation_Instructions</fullName>
        <active>true</active>
        <description>Document steps required for creating sandboxes</description>
        <label>Environment Creation Instructions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Future_Release</fullName>
        <active>true</active>
        <description>Defects or enhancements to be considered for future roll outs/hypercare</description>
        <label>Future Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sprint_Release</fullName>
        <active>true</active>
        <description>Release type for agile projects (not AM releases)</description>
        <label>Project Sprint Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standing_Release_Instructions</fullName>
        <active>true</active>
        <description>Steps to follow on every release</description>
        <label>Standing Release Instructions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>